<resources>
    <string name="app_name">M</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login">登录</string>
    <string name="nickname">昵称：一笨正经的小孩</string>
    <string name="version">版本信息</string>
    <string name="help">帮助与反馈</string>
    <string name="setting">设置</string>
    <string name="personal">我的</string>
    <string name="name">姓名</string>
    <string name="nickLabel">昵称</string>
    <string name="sex">性别</string>
    <string name="age">出生年月</string>
    <string name="hobby">爱好</string>
    <string name="register">注册</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register_username">注册用户</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="real_name">真实姓名</string>
    <string name="birthday">出生年月</string>
    <string name="phone">电话</string>
    <string name="email">邮箱</string>
    <string name="icon_header">头像</string>
</resources>
