<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_exit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="20dp"
            android:src="@mipmap/icon_exit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/register_username"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18sp" />

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/edit_text_bg_selector"
                android:hint="@string/input_username"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_16sp" />

            <EditText
                android:id="@+id/et_user_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg_selector"
                android:hint="@string/input_password"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_16sp" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg_selector"
                android:hint="@string/confirm_password"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_16sp" />

            <EditText
                android:id="@+id/et_real_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg_selector"
                android:hint="@string/real_name"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_16sp" />

            <EditText
                android:id="@+id/et_sex"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg_selector"
                android:hint="@string/sex"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_16sp" />

            <EditText
                android:id="@+id/et_birthday"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg_selector"
                android:hint="@string/birthday"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_16sp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg_selector"
                android:hint="@string/phone"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_16sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg_selector"
                android:hint="@string/email"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_16sp" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@color/dark_blue"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16sp" />
        </LinearLayout>
    </RelativeLayout>

</layout>