<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_exit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/icon_exit"
            android:padding="20dp"
            />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@mipmap/icon_m"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/register"
            android:textSize="@dimen/text_size_18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_alignParentRight="true"
            />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/user_name"
            android:background="@drawable/edit_text_bg_selector"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColorHint="@color/gray"
            android:layout_below="@id/iv_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/et_user_password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:background="@drawable/edit_text_bg_selector"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColorHint="@color/gray"
            android:layout_below="@id/et_user_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:password="true"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/dark_blue"
            android:layout_below="@id/et_user_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_size_18sp"
            />
    </RelativeLayout>

</layout>